<resources>
    <!--<string name="app_name">ezDelivery</string>-->
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_user_id">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user ID is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="scan_to_shelf">Scan to shelf</string>
    <string name="picking">Picking</string>
    <string name="out_for_delivery">Scan for delivery</string>
    <string name="ready_for_collection">Ready for collection</string>
    <string name="sign">Sign</string>
    <string name="search_parcel">Search Parcel</string>
    <string name="scan_search">Scan Search</string>
    <string name="my_setting">My Setting</string>
    <string name="update">Update</string>
    <string name="parcel_list">Parcel List</string>
    <string name="delivery">delivery</string>
    <string name="time_start">Time start</string>
    <string name="picked">Picked</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="delivery_method">Delivery method</string>
    <string name="time_end">Time end</string>
    <string name="bp">BP</string>
    <string name="parcel_no">Parcel No.</string>
    <string name="shelf_no">Shelf No.</string>
    <string name="weight">Weight</string>
    <string name="parcel_bp">Parcel BP</string>
    <string name="box_no">Box NO.</string>
    <string name="act">Act.</string>
    <string name="save">Save</string>
    <string name="remark">Remark</string>
    <string name="loading">loading</string>
    <string name="warehouse">WareHouse</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="station">Stations</string>
    <string name="save_succeeded">Save succeeded!</string>
    <string name="deliveryMethod_must_be_chose">DeliveryMethod must be chose！</string>
    <string name="lock_succeeded">Lock succeeded!</string>
    <string name="unlock_succeeded">Unlock succeeded!</string>
    <string name="all_period">All Period</string>
    <string name="all_region">All Region</string>
    <string name="all_driver">All Driver</string>
    <string name="all_house">All House</string>
    <string name="all_mrt_station">All MRT Station</string>
    <string name="All_Station">All Station</string>
    <string name="Network_is_error">Network or service is error!</string>
    <string name="You_must_choose_bp">You must choose BP!</string>
    <string name="You_must_choose_boxNum">You must choose box number!</string>
    <string name="Choice_delivery_method">Choice delivery method</string>
    <string name="Choice_station">Choice station</string>
    <string name="living">Living</string>
    <string name="testing">Testing</string>
    <string name="logout">Logout</string>
    <string name="all_warehouses">All warehouses</string>
    <string name="search">search</string>
    <string name="scan">Scan</string>
    <string name="all_are_saved">All are saved!</string>
    <string name="method">Method</string>
    <string name="date">Date</string>
    <string name="user_id">User ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="version">Version:</string>
    <string name="address">Address :</string>
    <string name="pwd_not_match">Password confirmation doesn\'t match Password</string>
    <string name="new_pwd_old">The new password mustn\'t same as old password!</string>
    <string name="succeeded">Succeeded!</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="confirm">Confirm</string>
    <string name="sign_to_receive">Sign to receive</string>
    <string name="parcel_detail">Parcel Detail</string>
    <string name="partner_shop">ezBiz</string>
    <string name="box">Box</string>
    <string name="login_now">Logout now?</string>
    <string name="parcel_no_erro">ParcelNo. or Service is Error!</string>
    <string name="thank_u">Thank you!</string>
    <string name="parcel_NO">"Parcel NO: "</string>
    <string name="user_ID">"User ID: "</string>
    <string name="phone_">"Phone: "</string>
    <string name="status_">"Status: "</string>
    <string name="waiting">Waiting...</string>
    <string name="pls_rating_service">Please rating service</string>
    <string name="clear">Clear</string>
    <string name="service_score">Service score</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="force_save">Force Save</string>
    <string name="second_scan_to_shelf">Second scan to shelf</string>
    <string name="str_continue">continue</string>
    <string name="remark_title">Please make sure the following instruction has completed:</string>
    <string name="pls_input_password">Please input password:</string>
    <string name="password_error">password error!</string>
    <string name="user_type">User type :</string>
    <string name="cart">cart</string>
    <string name="box_or_parcel">box/parcel</string>
    <string name="is_not_in_search_list"> is not in search list!</string>
    <string name="keep_list_not_empty">Please make sure search list is not empty!</string>
    <string name="item_switch">Switch</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_error">Error sign in</string>
    <string name="send_sms">Send SMS</string>
    <string name="neighborhood_picking">Neighborhood Picking</string>
    <string name="this_pkg_has_been_sign">This package has been sign</string>
    <string name="please_input_remark_information">Please input remark information!</string>
    <string name="isnot_correct_format">isn not a correct box number format!</string>
    <string name="has_scanned">has be scanned!</string>
    <string name="cannot_find_station_info">Can not find this parcel\'s station information</string>
    <string name="the_parcel_station_has_not_bean_bound_with_boxnum">The parcel station has not been bound with boxNum</string>
    <string name="cannot_find_bp_value">can not find BP value</string>
    <string name="d2d">Home delivery</string>
    <string name="check_in">Check in</string>
    <string name="check_in_successful">Check in successful</string>
    <string name="my_job">My job</string>
    <string name="apply_for_loading">Apply for loading</string>
    <string name="finished_loading">Finished Loading</string>
    <string name="packing">Loading goods</string>
    <string name="color">Color Filter</string>
    <string name="please_choose_time">Please choose time first</string>
    <string name="time">Time</string>
    <string name="please_choose_remark_template">Please choose remark template</string>
    <string name="subParcelDetail">SubParcelDetail</string>
    <string name="work_schedule">Work Schedule</string>
    <string name="cancel_form">Cancel Form</string>
    <string name="scan_for_clearance">Scan for clearance</string>
    <string name="clearMsg">"This pkg can be arranged for delivery to Singapore Post "</string>
    <string name="query_status">Query status</string>
    <string name="react_native">react native</string>
</resources>
