<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="38dp"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <CheckBox
        android:id="@+id/check_all"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tab_nick_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/prompt_user_id"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/tab_shelf_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/shelf_no"
        android:textColor="@color/blue" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center"
        android:text="@string/parcel_no"
        android:textColor="@android:color/black" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/weight"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/parcel_bp"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/station"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="@color/blue"
        android:text="Tag" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/box_no"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/act"
        android:textColor="@android:color/black" />
</LinearLayout>

