<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffefeef3"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_method"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/method" />

            <TextView
                android:id="@+id/tv_method"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@mipmap/arrow_gray_right"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:textColor="#000000" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_station"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/station" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@mipmap/arrow_gray_right"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:textColor="#000000" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/rl_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_name"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/date_name"
                android:gravity="center_vertical"
                android:minWidth="240dp"
                android:paddingLeft="7dp"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:minWidth="30dp"
                android:padding="7dp"
                android:src="@mipmap/ic_et_clear"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="6dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/user_id" />

        <EditText
            android:id="@+id/et_user_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="7dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="6dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/phone_no" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:paddingLeft="7dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="6dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/parcel_no" />

        <EditText
            android:id="@+id/et_parcel_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:paddingLeft="7dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="6dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/shelf_no" />

        <EditText
            android:id="@+id/et_shel_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:paddingLeft="7dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:background="#ff33b5e5"
        android:text="@string/search"
        android:textColor="#FFFFFF" />

</LinearLayout>