<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="User ID :"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/user_type"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="#ff9e9e9e"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="#ff9e9e9e"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="#ff9e9e9e"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff33b5e5"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/version"
        tools:text="Version:1.1"
        android:paddingBottom="16dp"
        android:gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>