<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chooseDate"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="center"
            android:hint="@string/date"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />
    <Button
        android:id="@+id/chooseTime"
        android:layout_width="0dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:layout_height="56dp"
        android:background="@color/gray"
        android:gravity="center"
        android:hint="@string/time"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="?attr/colorAccent"
            android:minWidth="160dp"
            android:padding="12dp"
            android:text="@string/apply_for_loading"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnApply"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="num:hau" />

        <TextView
            android:id="@+id/bReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/num"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:textSize="14sp"
            android:text="B Ready" />
        <TextView
            android:id="@+id/pReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/bReady"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:textSize="14sp"
            android:text="P Ready" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pReady"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="visible"
            tools:text="@string/waiting" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/num"
            android:layout_marginTop="110dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:minWidth="160dp"
            android:padding="12dp"
            android:text="@string/finished_loading"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>